refactorizando open graph

--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     
-    <!-- Open Graph Meta Tags -->
+    <!-- 
+    RESPALDO DE META TAGS ESTÁTICOS REMOVIDOS PARA PERMITIR OPEN GRAPH DINÁMICO
+    
+    Open Graph Meta Tags (REMOVIDO - Ahora manejado por SSR):
     <meta property="og:title" content="Tarjeta Digital | Perfil Profesional">
     <meta property="og:description" content="Especializado en desarrollo web moderno. Conecta conmigo a través de mi tarjeta digital interactiva.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tarjeta-jeans.smartdigitaltec.com">
     <meta property="og:image" content="https://tarjeta-jeans.smartdigitaltec.com/assets/imagen/og/tarjeta_digital.jpg">
-    <meta property="og:site_name" content="Tarjeta Digital">
 
-    <!-- Twitter Card Meta Tags -->
+    Twitter Card Meta Tags (REMOVIDO - Ahora manejado por SSR):
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tarjeta Digital | Perfil Profesional">
     <meta name="twitter:description" content="Especializado en desarrollo web moderno. Conecta conmigo a través de mi tarjeta digital interactiva.">
     <meta name="twitter:image" content="https://tarjeta-jeans.smartdigitaltec.com/assets/imagen/og/tarjeta_digital.jpg">
 
-    <!-- Additional SEO Meta Tags -->
+    Additional SEO Meta Tags (REMOVIDO - Ahora manejado por SSR):
     <meta name="description" content="Especializado en desarrollo web moderno. Conecta conmigo a través de mi tarjeta digital interactiva.">
     <meta name="keywords" content="tarjeta digital, desarrollo web, programador, perfil profesional, contacto">
     <meta name="author" content="Tarjeta Digital">
     <link rel="canonical" href="https://tarjeta-jeans.smartdigitaltec.com">
+    -->
+
+    <!-- Meta tags genéricos como fallback (mantenidos) -->
+    <meta property="og:site_name" content="Tarjeta Digital">
+    <meta property="og:locale" content="es_ES">
+    <meta name="application-name" content="Tarjeta Digital">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
