quitando usuario por defecto

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,20 @@
     <meta property="og:site_name" content="Tarjeta Digital">
     <meta property="og:locale" content="es_ES">
     <meta name="application-name" content="Tarjeta Digital">
+    
+    <!-- Fallback meta tags básicos para crawlers (serán reemplazados por SSR) -->
+    <meta name="description" content="Tarjeta Digital - Perfiles profesionales interactivos">
+    <meta property="og:title" content="Tarjeta Digital">
+    <meta property="og:description" content="Plataforma de tarjetas digitales profesionales">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tarjeta-holografico.smartdigitaltec.com">
+    <meta property="og:image" content="https://tarjeta-holografico.smartdigitaltec.com/assets/images/default-og-image.svg">
+    
+    <!-- Twitter Cards fallback -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tarjeta Digital">
+    <meta name="twitter:description" content="Plataforma de tarjetas digitales profesionales">
+    <meta name="twitter:image" content="https://tarjeta-holografico.smartdigitaltec.com/assets/images/default-og-image.svg">
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
